--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "twspace-crawler",
-  "version": "1.11.13",
+  "version": "1.11.14",
   "description": "Script to monitor & download Twitter Spaces 24/7",
   "keywords": [
     "node",
@@ -38,9 +38,12 @@
     "commander": "^8.3.0",
     "dotenv": "^14.2.0",
     "js-yaml": "^4.1.0",
+    "luxon": "^3.3.0",
     "node-notifier": "^10.0.0",
     "open": "^8.4.0",
+    "subtitle": "^4.2.1",
     "tslib": "^2.3.1",
+    "twspace-crawler": "^1.11.13",
     "winston": "^3.4.0",
     "winston-daily-rotate-file": "^4.5.5"
   },
@@ -48,6 +51,7 @@
     "@hapi/code": "^8.0.5",
     "@hapi/lab": "^24.5.0",
     "@types/js-yaml": "^4.0.5",
+    "@types/luxon": "^3.3.0",
     "@types/node": "^14.0.0",
     "@types/node-notifier": "^8.0.2",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
