--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "bottleneck": "^2.19.5",
     "commander": "^8.3.0",
     "dotenv": "^14.2.0",
+    "form-data": "^4.0.0",
     "js-yaml": "^4.1.0",
     "luxon": "^3.3.0",
     "node-notifier": "^10.0.0",
